fixing all pending bugs